--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.1.0
-langchain==0.3.22
-langchain_core==0.3.49
-langchain_openai==0.3.11
-langchain_pinecone==0.2.3
-pinecone==6.0.2
-python-dotenv==1.1.0
-setuptools==78.1.0
+Flask
+langchain
+langchain_core
+langchain_openai
+langchain_pinecone
+pinecone
+python-dotenv
+setuptools
 sentence-transformers
